[package]
name = "sbbcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.10.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0"
time = {version = "0.3.6", features = ["parsing", "serde"]}
chrono = {version="0.4", features = ["serde"]}
pad = "0.1.6"
clap = { version = "3.0.10", features = ["derive"] }
